--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.liquibase.enabled = true
+spring.liquibase.change-log=classpath:/db/changelog.xml
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/AFTAS?createDatabaseIfNotExist=true
+spring.jpa.show-sql=true
