--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost:3306/AFTAS?createDatabaseIfNotExist=true
 spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql = true
